--- a/client/src/styles/base/_mixins.scss
+++ b/client/src/styles/base/_mixins.scss
@@ -20,12 +20,8 @@
 }
 
 @mixin pageWrap {
-  max-width: 90vw;
-  width: 100%;
+  max-width: 80vw;
   min-height: calc(100vh - 95px);
-  height: 100%;
-  padding-top: 75px;
-  padding-bottom: 20px;
   padding: 75px 10vw 20px 10vw;
   @media (max-width: 767px){
     padding-top: 50px;
