--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -1,38 +1,25 @@
 .home {
-  @include pageWrap;
-  display: flex;
-  justify-content: center;
-  background-image: url('../../assets/background_drawing.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center bottom;
-
-  &-content {
-    &-name {
-      display: flex;
-      justify-content: center;
-      font-size: 32px;
-      margin-top: 20px;
-      
-      &-first {
-        color: $accent;
-        margin: 0;
-      }
-      &-last {
-        color: $accent;
-        margin: 0 0 0 10px;
-      }
-    }
-
-    &-title {
-      font-size: 22px;
-      color: $accent;
-    }
-  }
-}
-
-@media (min-width: 1700px){
-  .home {
+  &-hero {
+    @include pageWrap;
+    display: flex;
+    flex-direction: column;
+    background-image: url('../../assets/background_drawing.svg');
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center bottom;
+    &-content {
+      max-width: 400px;
+      text-align: left;
+      margin-top: 100px;
+      h1 {
+        font-size: 60px;
+        margin-top: 20px;
+        color: $accent;
+      }
+      p {
+        font-size: 22px;
+        color: $accent;
+      }
+    }
   }
 }
